media query set-up

--- a/login/index.html
+++ b/login/index.html
@@ -28,6 +28,9 @@
                <button>LOG IN</button>
             </form>
         </div>
+        <div class="link">
+            <a href="../sign-up/sign-up.html">Don't have an account? Sign-up</a>
+        </div>
     </div>
 </body>
 </html>
