--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </form>
         </div>
         <div class="link">
-            <a href="../sign-up/sign-up.html">Don't have an account? Sign-up</a>
+            <a href="./sign-up/sign-up.html">Don't have an account? Sign-up</a>
         </div>
     </div>
 </body>
