--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="ctn">
         <header>
-            <img src="../images/logo.svg" alt="logo.png">
+            <img src="./images/logo.svg" alt="logo.png">
         </header>
         <div class="formBox">
             <div class="text">
