Linked all pages

--- a/sign-up/sign-up.html
+++ b/sign-up/sign-up.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="link">
-            <a href="../index.html">Already have an account? Log In</a>
+            <a href="../login/login.html" target="_blank">Already have an account? Log In</a>
         </div>
     </div>
     
