All pages linked and site made responsive

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -42,7 +42,7 @@
             <p>PiggyVest helps over 3 million customers achieve their financial goals by helping them save and
                 invest with ease.</p>
             <div class="button3">
-                <a href="#"><button>Create Free Account</button></a>
+                <a href="../sign-up/sign-up.html"><button>Create Free Account</button></a>
             </div>
             <div class="download">
                 <div class="button4">
