css animations added

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -182,33 +182,35 @@
         </div>
     </section>
     <section id="comments">
-        <div class="msgs">
-            <div class="msg-one">
-                <h5>Sunday, 3rd of April 2022 by 03:09 AM</h5>
-                <div class="avi">
-                    <img src="../images/img5b900ae055.jpeg" alt="">
-                    <h4>Yusuf O</h4>
+        <div class="scrollable">
+            <div class="msgs">
+                <div class="msg-one">
+                    <h5>Sunday, 3rd of April 2022 by 03:09 AM</h5>
+                    <div class="avi">
+                        <img src="../images/img5b900ae055.jpeg" alt="">
+                        <h4>Yusuf O</h4>
+                    </div>
+                    <p>I can't even believe I can be this diligent towards saving. Thank you Piggy.</p>
                 </div>
-                <p>I can't even believe I can be this diligent towards saving. Thank you Piggy.</p>
-            </div>
-            <div class="msg-two">
-                <h5>Thursday, 31st of March 2022 by 03:09 AM</h5>
-                <div class="avi">
-                    <img src="../images/ava618d4c6de5.jpg" alt="">
-                    <h4>Kehinde I</h4>
+                <div class="msg-two">
+                    <h5>Thursday, 31st of March 2022 by 03:09 AM</h5>
+                    <div class="avi">
+                        <img src="../images/ava618d4c6de5.jpg" alt="">
+                        <h4>Kehinde I</h4>
+                    </div>
+                    <p>Hello guys, my name is Kenny. I must tell you that this is an amazing innovation from Piggyvest in
+                        helping my savings culture. I can now easily put money away that would have been lavished and
+                        assured of rewards for it. Please join me in exploring this new world of savings management.</p>
                 </div>
-                <p>Hello guys, my name is Kenny. I must tell you that this is an amazing innovation from Piggyvest in
-                    helping my savings culture. I can now easily put money away that would have been lavished and
-                    assured of rewards for it. Please join me in exploring this new world of savings management.</p>
-            </div>
-            <div class="msg-three">
-                <h5>Thursday, 31st of March 2022 by 03:09 AM</h5>
-                <div class="avi">
-                    <img src="../images/img74100e61a0.jpeg" alt="">
-                    <h4>Osas P</h4>
+                <div class="msg-three">
+                    <h5>Thursday, 31st of March 2022 by 03:09 AM</h5>
+                    <div class="avi">
+                        <img src="../images/img74100e61a0.jpeg" alt="">
+                        <h4>Osas P</h4>
+                    </div>
+                    <p>I have saved In a month what I couldn't save in a year. All thanks to PiggyVest 😊</p>
                 </div>
-                <p>I have saved In a month what I couldn't save in a year. All thanks to PiggyVest 😊</p>
-            </div>
+        </div>
         </div>
         <div class="custom">
             <div class="top">
