--- a/homepage/index.html
+++ b/homepage/index.html
@@ -178,7 +178,7 @@
             </a>
         </div>
         <div class="box-b">
-            <img src="../images/Annotation 2022-04-06 213615.png" alt="">
+            <img src="../images/saver.png" alt="">
         </div>
     </section>
     <section id="comments">
